# url-parser

./: .gitignore  README.md  README.pt-br.md  color.js  index.html  main.js  package.json  style.css  url-parser.js
c++/: CMakeLists.txt  Makefile  README.md
c++/app/: CMakeLists.txt  main.cc
c++/inc/url_parser/: CMakeLists.txt  url_parser.h
c++/src/: CMakeLists.txt
c++/src/url_parser/: CMakeLists.txt  url_parser.cc
gtm/: spotify-audio.json.md  spotify-audio.json.pt-br.md
icons/: site.webmanifest
js/: README.md  main.js  package.json  test-class-method.js  url-parser.js  url-parser.test.js
js/src/: url-parser.js
js/test/: url-parser.test.js
js/util/: test-class-method.js
nextjs/: package-lock.json  package.json
nextjs/app/: form.tsx  layout.tsx  medias.tsx  output.tsx  page.tsx  result.tsx  spotifyPlayer.tsx  vimeoPlayer.tsx  youTubePlayer.tsx
nextjs/lib/: urlParser.js  urlParser.ts
nextjs/styles/: style.css
rust/: Cargo.toml  README.md
rust/src/: main.rs  url_parser.rs
